--- a/code/Car_prediction.ipynb
+++ b/code/Car_prediction.ipynb
@@ -5595,12 +5595,92 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "117e7458-df55-46cc-b03f-075765be9274",
    "metadata": {},
-   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee0f6ca8",
+   "metadata": {},
+   "source": [
+    "### Data Overview and Preprocessing\n",
+    "The analysis started with a dataset loaded from Cars.csv, containing 8,128 records and 13 initial features.\n",
+    "\n",
+    " Initial Data Cleaning & Feature Engineering\n",
+    "A series of transformations were applied to clean and prepare the data:\n",
+    "\n",
+    "Feature Conversion: Units were removed from mileage (kmpl), engine (CC), and max_power (bhp) to convert them to float data types.\n",
+    "\n",
+    "Owner Categorization: The owner feature was mapped to numerical values (1st Owner → 1, 2nd Owner → 2, etc.). 'Test Drive Car' records were subsequently removed.\n",
+    "\n",
+    "Fuel Type Filtering: Only Diesel and Petrol cars were retained; records with 'CNG' and 'LPG' were dropped.\n",
+    "\n",
+    "Brand Simplification: The detailed car model names were simplified to just the car brand (e.g., \"Maruti Swift...\" → \"Maruti\").\n",
+    "\n",
+    "Feature Removal: The torque column was dropped.\n",
+    "\n",
+    " Missing Value and Outlier Handling\n",
+    "Missing Value Imputation: Missing values in mileage, engine, max_power, and seats were imputed using the median of their respective columns.\n",
+    "\n",
+    "Outlier Removal (Target): Outliers in the target variable, selling_price, were removed using the Interquartile Range (IQR) method. Prices above 1,735,000 were considered outliers and dropped.\n",
+    "\n",
+    "Log Transformation: A log transformation was applied to the target variable (selling_price) and predictor variables (km_driven, engine, max_power) to achieve a more normal distribution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f467e4f9",
+   "metadata": {},
+   "source": [
+    "### Model Configuration\n",
+    "Regularization Techniques:\n",
+    "Normal\n",
+    "Ridge\n",
+    "Optimization Methods:\n",
+    "Batch\n",
+    "Mini-batch\n",
+    "Stochastic (sto)\n",
+    "Learning Rates (α): 0.01, 0.001, 0.0001\n",
+    "The training process involved iterating over all combinations of regularization, optimization methods, and learning rates. The model with the lowest training loss was selected as the best model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be64080b",
+   "metadata": {},
+   "source": [
+    "### Evaluation Metrics\n",
+    "The following metrics were computed for each class:\n",
+    "\n",
+    "Precision: Proportion of correctly predicted samples to total predicted samples in that category.\n",
+    "Recall: Proportion of correctly predicted samples to all actual samples in that category.\n",
+    "F1-Score: Harmonic mean of precision and recall.\n",
+    "Accuracy: Overall proportion of correct predictions.\n",
+    "Macro Average: Average metric across all categories equally.\n",
+    "Weighted Average: Average metric weighted by the number of samples in each category."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2aeda4e",
+   "metadata": {},
+   "source": [
+    "### Best Model:\n",
+    "Regularization: Ridge\n",
+    "Method: minibatch\n",
+    "Final Training Loss: 0.48779789103100785"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86578f32",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "The custom classification model successfully categorized cars into four price categories with reasonable accuracy."
+   ]
   }
  ],
  "metadata": {
