--- a/code/Car_prediction.ipynb
+++ b/code/Car_prediction.ipynb
@@ -13,6 +13,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0107744d",
+   "metadata": {},
+   "source": [
+    "##### Samir Pokharel-st125989"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56bc6f44",
+   "metadata": {},
+   "source": [
+    "https://github.com/Samir4456/Car-Price-Predication-V3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "98b44a9e-d494-4c86-971d-650c84bed2d4",
