--- a/code/Car_prediction.ipynb
+++ b/code/Car_prediction.ipynb
@@ -5697,6 +5697,14 @@
     "### Conclusion\n",
     "The custom classification model successfully categorized cars into four price categories with reasonable accuracy."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "067aa182",
+   "metadata": {},
+   "source": [
+    "![CI/CD Diagram](../CICD.png)\n"
+   ]
   }
  ],
  "metadata": {
